# webauthn-rs

./: .gitignore  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  Makefile  OpenSSL.md  README.md  SECURITY.md  pull_request_template.md
.github/: doc_manifest  (+3 more)
attestation-ca/: Cargo.toml  build.rs
attestation-ca/src/: lib.rs
authenticator-cli/: Cargo.toml
authenticator-cli/src/: main.rs
base64urlsafedata/: Cargo.toml
base64urlsafedata/src/: common.rs  human.rs  lib.rs  tests.rs
cable-tunnel-server/common/: Cargo.toml  README.md
cable-tunnel-server/common/src/: index.html  lib.rs  tls.rs
cable-tunnel-server/frontend/: Cargo.toml
cable-tunnel-server/frontend/src/: main.rs
compat_tester/webauthn-rs-demo/: Cargo.toml  README.md
compat_tester/webauthn-rs-demo-shared/: Cargo.toml
compat_tester/webauthn-rs-demo-shared/src/: lib.rs
compat_tester/webauthn-rs-demo-wasm/: Cargo.toml  Trunk.toml  index.html
compat_tester/webauthn-rs-demo-wasm/src/: compat.rs  condui.rs  demo.rs  lib.rs  main.rs  manager.rs  utils.rs
compat_tester/webauthn-rs-demo/pkg/: webauthn_rs_demo_wasm.d.ts  webauthn_rs_demo_wasm.js  webauthn_rs_demo_wasm_bg.wasm  webauthn_rs_demo_wasm_bg.wasm.d.ts
compat_tester/webauthn-rs-demo/src/: actors.rs  crypto.rs  main.rs
demo/: .gitignore  Cargo.toml  README.md  generate_certs.sh  generate_self_signed_certs.sh
demo/migration/: Cargo.toml
demo/migration/src/: m20220101_000001_create_table.rs
demo/src/: app.rs  lib.rs  main.rs  main_client.rs  main_ssr.rs  server_config.rs  state.rs
demo/src/components/: mod.rs  navbar.rs
demo/src/pages/: home.rs  login.rs  mod.rs  not_found.rs  register.rs
demo/src/server/: config.rs  cookie.rs  error.rs  mod.rs  state.rs
device-catalog/: Cargo.toml
device-catalog/src/: aaguid.rs  certificate_authority.rs  device.rs  image.rs  lib.rs  manufacturer.rs  query.rs  quirks.rs
device-catalog/src/data/: android.rs  apple.rs  google.rs  microsoft.rs  mod.rs  nitrokey.rs  yubico.rs
examples/tide/tide_yew/: Cargo.toml  build_wasm.sh  main.js
fido-hid-rs/: Cargo.toml  README.md  build.rs
fido-hid-rs/src/: descriptors.rs  error.rs  lib.rs  traits.rs
fido-hid-rs/src/linux/: mod.rs  wrapper.h  wrapper.rs
fido-hid-rs/src/macos/: iokit.rs  mod.rs
fido-hid-rs/src/windows/: mod.rs
fido-key-manager/: Cargo.toml  README.md  build.rs
fido-key-manager/src/: main.rs
fido-key-manager/windows/: fido-key-manager.exe.manifest  fido-key-manager.rc
fido-mds/: Cargo.toml  README.md
fido-mds-tool/: Cargo.toml  README.md
fido-mds-tool/src/: main.rs
fido-mds/src/: lib.rs  mds.rs  patch.rs  query.rs
sshkey-attest/: Cargo.toml  README.md
sshkey-attest/src/: lib.rs  proto.rs
tutorial/server/actix_web/: Cargo.toml
tutorial/server/axum/: Cargo.toml  README.md  build_wasm.sh
tutorial/server/cli/: Cargo.toml
tutorial/server/tide/: Cargo.toml
tutorial/wasm/: Cargo.toml  build.sh
tutorial/wasm/src/: lib.rs
webauthn-authenticator-rs/: Cargo.toml  README.md  build.rs
webauthn-authenticator-rs/examples/: authenticate.rs  cable_domain.rs  cable_tunnel.rs  conformance.rs  softtoken.rs
webauthn-authenticator-rs/examples/authenticate/: main.rs
webauthn-authenticator-rs/examples/cable_tunnel/: core.rs  main.rs
webauthn-authenticator-rs/examples/conformance/: core.rs  main.rs
webauthn-authenticator-rs/examples/key_manager/: main.rs
webauthn-authenticator-rs/examples/nfc_token_info/: core.rs  core_bak.rs  main.rs
webauthn-authenticator-rs/examples/softtoken/: main.rs
webauthn-authenticator-rs/src/: authenticator_hashed.rs  crypto.rs  error.rs  lib.rs  macos.rs  mozilla.rs  softpasskey.rs  softtok.rs  softtoken.rs  stubs.rs  types.rs  u2fhid.rs  util.rs
webauthn-authenticator-rs/src/MacAuthn/: Package.resolved  Package.swift  README.md
webauthn-authenticator-rs/src/bluetooth/: framing.rs  mod.rs
webauthn-authenticator-rs/src/cable/: base10.rs  btle.rs  discovery.rs  framing.rs  handshake.rs  macros.rs  mod.rs  noise.rs  tunnel.rs
webauthn-authenticator-rs/src/cbor/: client_pin.rs  config.rs  get_assertion.rs  get_info.rs  make_credential.rs  mod.rs  reset.rs  selection.rs
webauthn-authenticator-rs/src/ctap2/: bio_enrollment.rs  client_pin.rs  ctap20.rs  ctap21.rs  ctap21_bio.rs  ctap21_cred.rs  ctap21pre.rs  get_info.rs  internal.rs  mod.rs  pin_uv.rs  solokey.rs  yubikey.rs
webauthn-authenticator-rs/src/nfc/: apdu.rs  atr.rs  iso7816.rs  mod.rs  tlv.rs  worker.rs
webauthn-authenticator-rs/src/tlv/: ber.rs  mod.rs
webauthn-authenticator-rs/src/transport/: any.rs  ctap21pre.rs  iso7816.rs  mod.rs  solokey.rs  types.rs  yubikey.rs
webauthn-authenticator-rs/src/ui/: cli.rs  mod.rs
webauthn-authenticator-rs/src/usb/: framing.rs  mod.rs  responses.rs  solokey.rs  yubikey.rs
webauthn-authenticator-rs/src/win10/: clientdata.rs  cose.rs  credential.rs  extensions.rs  gui.rs  mod.rs  native.rs  rp.rs  user.rs
webauthn-rp-proxy/: Cargo.toml  Makefile  README.md
webauthn-rp-proxy/src/: main.rs
webauthn-rp-proxy/test-data/: authenticate-finish.json  authenticate-start.json  register-finish.json  register-start.json
webauthn-rp-proxy/tests/: integration_test.rs
webauthn-rs/: Cargo.toml
webauthn-rs-core/: Cargo.toml  build.rs
webauthn-rs-core/src/: attestation.rs  constants.rs  core.rs  crypto.rs  error.rs  fake.rs  interface.rs  internals.rs  lib.rs  proto.rs  ssh.rs
webauthn-rs-demo/: Cargo.toml  README.md
webauthn-rs-demo-shared/: Cargo.toml
webauthn-rs-demo-shared/src/: lib.rs
webauthn-rs-demo/pkg/: bundle.js  webauthn_rs_demo_wasm.d.ts  webauthn_rs_demo_wasm.js  webauthn_rs_demo_wasm_bg.wasm  webauthn_rs_demo_wasm_bg.wasm.d.ts
webauthn-rs-demo/src/: actors.rs  config.rs  main.rs
webauthn-rs-demo/templates/: index.html  sandbox_index.html
webauthn-rs-proto/: Cargo.toml
webauthn-rs-proto/src/: attest.rs  auth.rs  cose.rs  extensions.rs  lib.rs  options.rs  origin.rs  tests.rs  wasm.rs
webauthn-rs/src/: attestation.rs  core.rs  crypto.rs  ephemeral.rs  error.rs  interface.rs  lib.rs  macros.rs  proto.rs  trust.rs
(+119 files in other folders)
