[workspace.package]
version = "0.6.0-dev"
authors = [
    "William Brown <william@blackhats.net.au>",
    "Michael Farrell <micolous+git@gmail.com>",
]
rust-version = "1.85"
edition = "2021"
repository = "https://github.com/kanidm/webauthn-rs"
homepage = "https://github.com/kanidm/webauthn-rs"
license = "MPL-2.0"

[workspace]
resolver = "2"
members = [
    # Support Libraries
    "base64urlsafedata",
    "webauthn-rs-proto",
    "webauthn-rs-core",
    # The actually library.
    "webauthn-rs",
    # Authenticator interactions
    "fido-hid-rs",
    "webauthn-authenticator-rs",
    # caBLE tunnel server
    "cable-tunnel-server/backend",
    "cable-tunnel-server/common",
    "cable-tunnel-server/frontend",
    "fido-key-manager",
    # Authenticator CLI,
    "authenticator-cli",
    # Tutorial / Example sites.
    "tutorial/server/tide",
    "tutorial/server/axum",
    "tutorial/server/actix_web",
    "tutorial/wasm",
    # Attestatation struct format
    "attestation-ca",
    # Fido MDS tools
    "fido-mds",
    "fido-mds-tool",
    # Our Device Catalog
    "device-catalog",
    # "device-catalog-tool",
    # The compat tester
    "compat_tester/webauthn-rs-demo",
    "compat_tester/webauthn-rs-demo-shared",
    # Ssh Key Attestation
    "sshkey-attest",
    # RP Proxy
    "webauthn-rp-proxy",
]

# Due to --cfg=web_sys_unstable_apis
exclude = ["compat_tester/webauthn-rs-demo-wasm", "tutorial/wasm"]

[workspace.dependencies]
# These are in release/dependency order.
base64urlsafedata = { path = "./base64urlsafedata", version = "=0.6.0-dev" }
fido-hid-rs = { path = "./fido-hid-rs", version = "=0.6.0-dev" }
webauthn-attestation-ca = { path = "./attestation-ca", version = "=0.6.0-dev" }
webauthn-rs-proto = { path = "./webauthn-rs-proto", version = "=0.6.0-dev" }
fido-mds = { path = "./fido-mds", version = "=0.6.0-dev" }
webauthn-rs-core = { path = "./webauthn-rs-core", version = "=0.6.0-dev" }
webauthn-rs = { path = "./webauthn-rs", version = "=0.6.0-dev" }
webauthn-authenticator-rs = { path = "./webauthn-authenticator-rs", version = "=0.6.0-dev" }

# Currently un-released
cable-tunnel-server-common = { path = "./cable-tunnel-server/common", version = "0.1.0" }
webauthn-rs-device-catalog = { path = "./device-catalog" }

async-std = { version = "1.6", features = ["attributes"] }
anyhow = "1.0"
base64 = "0.21"
clap = { version = "^4.5", features = ["derive", "env"] }

crypto-glue = "^0.1.8"
compact_jwt = "0.5.1-dev"
futures = "^0.3.25"
hex = "0.4.3"
http = "^0.2.9"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", default-features = false, features = ["http1"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
nom = "7.1"
num-derive = { version = "0.4.2" }
peg = "0.8.5"
openssl = "^0.10.56"
openssl-sys = "^0.9.109"

tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tokio = { version = "1.47.2", features = [
    "sync",
    "test-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
async-trait = "~0.1"
async-std = { version = "1.13", features = ["attributes"] }
anyhow = "1.0"
base64 = "0.21"
clap = { version = "^4.5", features = ["derive", "env"] }
compact_jwt = "0.4.3"
futures = "^0.3.31"
hex = "0.4.3"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", default-features = false, features = ["http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
nom = "7.1.3"
num-derive = { version = "0.4.2" }
peg = "0.8.5"
openssl = "^0.10.75"
openssl-sys = "^0.9.111"
tokio-tungstenite = { version = "^0.28.0", features = ["native-tls"] }
tracing = "^0.1.43"
tracing-log = { version = "0.2.0" }
tungstenite = { version = "^0.28.0", default-features = false, features = [
    "handshake",
] }
url = "2"
uuid = "^1.19.0"
serde = { version = "^1.0.228", features = ["derive"] }
serde_cbor_2 = { version = "0.13.0" }
serde_json = "^1.0.145"
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = { version = "0.12.25", default-features = false, features = [
    "rustls-tls-native-roots",
] }
thiserror = "^1.0.69"
tokio-native-tls = "^0.3.1"
tokio-stream = { version = "0.1", features = ["sync"] }
