[package]
name = "webauthn-attestation-ca"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.70.0"
license = "MPL-2.0"
description = "Webauthn Attestation Library"
# documentation = "https://docs.rs/kanidm/latest/kanidm/"
repository = "https://github.com/kanidm/webauthn-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64urlsafedata.workspace = true
serde.workspace = true
tracing.workspace = true
openssl.workspace = true
uuid = { workspace = true, features = ["serde"] }
