[package]
name = "webauthn-attestation-ca"
readme = "README.md"
description = "Webauthn Attestation CA Descriptions"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64urlsafedata.workspace = true
serde.workspace = true
tracing.workspace = true
openssl.workspace = true
openssl-sys.workspace = true
uuid = { workspace = true, features = ["serde"] }
