[package]
name = "authenticator-cli"
readme = "README.md"
description = "Webauthn Authenticator Management Tool"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]

authenticator = { version = "0.3.2-dev.1", default-features = false, features = [
    "crypto_openssl",
], package = "authenticator-ctap2-2021" }
clap = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
