[package]
name = "base64urlsafedata"
version = "0.1.4"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.67.0"
description = "Base 64 Url Safe wrapper for Serde"
repository = "https://github.com/kanidm/webauthn-rs"
keywords = ["base64", "serde"]
categories = ["web-programming"]
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
base64.workspace = true
serde_json.workspace = true
