[package]
name = "base64urlsafedata"
version = "0.1.3"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.70.0"
description = "Base 64 Url Safe wrapper for Serde"
repository = "https://github.com/kanidm/webauthn-rs"
keywords = ["base64", "serde"]
categories = ["web-programming"]
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
base64.workspace = true
paste = "1.0.14"

[dev-dependencies]
serde_cbor_2.workspace = true
serde_json.workspace = true
