[package]
name = "base64urlsafedata"
description = "Base 64 Url Safe wrapper for Serde"
keywords = ["base64", "serde"]
categories = ["web-programming"]
readme = "README.md"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
base64.workspace = true
pastey = "0.1.0"

[dev-dependencies]
serde_cbor_2.workspace = true
serde_json.workspace = true
