[package]
name = "webauthn-rs-device-catalog"
version = "0.5.0-20230418"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
description = "Webauthn RS Device Catalog"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[dependencies]
webauthn-attestation-ca.workspace = true
base64urlsafedata = { workspace = true }
openssl = { workspace = true }
peg = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }
