[package]
name = "fido-hid-rs"
version = "0.5.0-dev"
edition = "2021"
rust-version = "1.66.0"
license = "MPL-2.0"
description = "USB HID library for FIDO authenticators"
repository = "https://github.com/kanidm/webauthn-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
bitflags = "1.3.2"
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
lazy_static = "1.4.0"
windows = { version = "0.41.0", features = ["Win32_Foundation", "Win32_Devices_HumanInterfaceDevice", "Devices_Enumeration", "Devices_HumanInterfaceDevice", "Foundation", "Foundation_Collections", "Storage", "Storage_Streams" ] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
libc = "0.2"
mach2 = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.26.2", features = ["ioctl", "poll"] }
udev = "0.7.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
bindgen = "0.65.1"
