[package]
name = "fido-hid-rs"
version = "0.5.0-dev"
edition = "2021"
rust-version = "1.70.0"
license = "MPL-2.0"
description = "USB HID library for FIDO authenticators"
repository = "https://github.com/kanidm/webauthn-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
bitflags = "1.3.2"
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[build-dependencies]
# Actually only required when targeting Linux, but Cargo doesn't support
# build-dependencies for a single target, and you might be cross-compiling.
bindgen = "0.65.1"

[dev-dependencies]
tracing-subscriber.workspace = true

# descriptors tests
hex.workspace = true
num-derive = "0.3"
num-traits = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
lazy_static = "1.4.0"
windows = { version = "0.41.0", features = ["Win32_Foundation", "Win32_Devices_HumanInterfaceDevice", "Devices_Enumeration", "Devices_HumanInterfaceDevice", "Foundation", "Foundation_Collections", "Storage", "Storage_Streams" ] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
libc = "0.2"
mach2 = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.26.2", features = ["ioctl", "poll"] }
num-derive = "0.3"
num-traits = "0.2"
udev = "0.7.0"
