[package]
name = "fido-key-manager"
version = "0.1.0"
authors = ["Michael Farrell <micolous+git@gmail.com>"]
categories = ["authentication"]
description = "Management CLI for FIDO/CTAP 2.x authenticators"
edition = "2021"
keywords = ["ctap", "fido", "passkeys", "webauthn"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/kanidm/webauthn-rs/"
rust-version = "1.70.0"
build = "build.rs"

[[bin]]
name = "fido-key-manager"
# cargo can't run binaries needing elevation on Windows, and there's no tests
# here anyway.
test = false

[features]
# Bluetooth support is flakey on Linux and Windows, so not enabled by default.
bluetooth = ["webauthn-authenticator-rs/bluetooth"]
nfc = ["webauthn-authenticator-rs/nfc"]
usb = ["webauthn-authenticator-rs/usb"]
solokey = ["webauthn-authenticator-rs/vendor-solokey"]

default = ["nfc", "usb"]

[dependencies]
webauthn-authenticator-rs = { workspace = true, features = ["ui-cli", "ctap2-management"] }

clap.workspace = true
hex.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webauthn-rs-core.workspace = true

[build-dependencies]
embed-resource = "2.1"
