[package]
name = "fido-mds-tool"
version = "0.5.0-dev"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.70.0"
description = "Fido Metadata Service parsing tool"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[dependencies]
fido-mds = { version = "0.5.0-dev", path = "../fido-mds" }

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
