[package]
name = "fido-mds-tool"
description = "Fido Metadata Service parsing tool"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
fido-mds.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

url = { version = "2", features = ["serde"] }

reqwest = { workspace = true, features = ["blocking"] }

serde_json.workspace = true
