[package]
name = "fido-mds"
version = "0.4.2-beta.4"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
description = "Fido Metadata Service parser"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "../README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# base64urlsafedata = { version = "0.1", path = "../base64urlsafedata" }
# compact_jwt = "^0.2.3"
compact_jwt = { path = "/Users/william/development/kanidm/compact_jwt", features = ["unsafe_release_without_verify"] }

openssl = { version = "0.10" }
serde = { version = "^1.0.141", features = ["derive"] }
serde_json = "^1.0.79"
# time = { version = "0.3", features = ["serde", "serde-well-known"] }
tracing = "^0.1.35"
uuid = { version = "1", features = ["v4", "serde"] }

