[package]
name = "fido-mds"
version = "0.5.0-dev"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.70.0"
description = "Fido Metadata Service parser"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webauthn-attestation-ca.workspace = true
base64.workspace = true
crc32c = "^0.6.4"
compact_jwt.workspace = true
openssl.workspace = true
peg = "0.8.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
