[package]
name = "fido-mds"
description = "Fido Metadata Service parser"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webauthn-attestation-ca.workspace = true
base64.workspace = true
crc32c = "^0.6.4"
compact_jwt.workspace = true
openssl.workspace = true
peg = "0.8.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
