[package]
name = "sshkey-attest"
version = "0.5.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.70.0"
description = "FIDO SK SSH Key Attestation"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
keywords = ["ssh", "openssh", "parser", "attestation", "fido"]
categories = [
    "authentication",
    "cryptography",
    "parser-implementations",
    "encoding",
]
license = "MPL-2.0"

[dependencies]
base64.workspace = true
base64urlsafedata.workspace = true
nom.workspace = true
openssl.workspace = true
serde.workspace = true
serde_cbor_2.workspace = true
sshkeys = { version = "0.3.3", features = ["serde"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }
webauthn-rs-core.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
webauthn-rs-device-catalog.workspace = true
